# enhanced-srgan

./: .gitignore  README.md  extract_model_from_checkpoint.py  inference.py  net_interpolation.py  pyproject.toml  requirements.txt  setup.cfg  test.py  train.py
configs/: all_192_cr_23_rrdb_div2k_only.json  esrgan_128_cr_23_rrdb_div2k.json  esrgan_192_cr_23_rrdb_div2k.json  esrgan_default.json  esrgan_p192_t128_cr_23_rrdb_div2k.json  pretraining_128_patch_size.json  pretraining_192_cr_16_rrdb.json  pretraining_192_cr_23_rrdb.json  pretraining_192_cr_23_rrdb_div2k_only.json  pretraining_192_patch_size.json
tests/datasets/: test_dataset_transforms.py  test_datasets.py
tools/: extract_model_from_checkpoint.py  fix_upscaling_checkpoint_params.py
torch-srgan/datasets/: base_class.py
torch_sr/: __init__.py
torch_sr/datasets/: DIV2K.py  __init__.py  base_class.py  transforms.py
torch_sr/loggers/: base_class.py  wandb.py
torch_sr/models/: RRDBNet.py  VGG_discriminator.py  __init__.py
torch_sr/nn/: __init__.py
torch_sr/nn/criterions/: perceptual.py
torch_sr/utils/: __init__.py  path_iter.py
torch_srgan/: __init__.py
torch_srgan/datasets/: BSDS500.py  DIV2K.py  __init__.py  base_class.py  datasets.py  test_sets.py  transforms.py
torch_srgan/loggers/: __init__.py  base_class.py  loggerboard.py  tensorboard.py  wandb.py
torch_srgan/models/: RRDBNet.py  VGG_discriminator.py  dense_residual_block.py  discriminator.py  esrgan.py  feature_extractor.py  generator_rrdb.py  residual_in_residual_dense_block.py
torch_srgan/utils/: datasets.py  file_download.py  path_iter.py
wandb/: latest-run
wandb/run-20220617_131521-rxxjzd0r/: run-rxxjzd0r.wandb
wandb/run-20220617_131738-1ctmsdok/: run-1ctmsdok.wandb
wandb/run-20220617_131841-1hux20a6/: run-1hux20a6.wandb
wandb/run-20220617_131949-2y2wvxcx/: run-2y2wvxcx.wandb
wandb/run-20220617_132211-3jckv764/: run-3jckv764.wandb
wandb/run-20220617_132802-3cu4g0mw/: run-3cu4g0mw.wandb
wandb/run-20220617_134115-36e5g43r/: run-36e5g43r.wandb
wandb/run-20220617_134215-w0h50grq/: run-w0h50grq.wandb
wandb/run-20220617_134433-20vh65or/: run-20vh65or.wandb
wandb/run-20220617_134627-sl9hd5th/: run-sl9hd5th.wandb
wandb/run-20220617_134829-39x2ehyl/: run-39x2ehyl.wandb
wandb/run-20220617_135037-3b4jxwmx/: run-3b4jxwmx.wandb
wandb/run-20220617_160007-sk328zte/: run-sk328zte.wandb
wandb/run-20220617_161230-zd5bh6rk/: run-zd5bh6rk.wandb
wandb/run-20220617_162545-v7rf6oho/: run-v7rf6oho.wandb
wandb/run-20220617_162904-1jgof6cr/: run-1jgof6cr.wandb
wandb/run-20220617_162916-m75xe0r6/: run-m75xe0r6.wandb
(+116 files in other folders)
