;[metadata]
;name = torch-sr
;version = attr: torch_sr.__version__
;description = PyTorch Super-Resolution Deep Learning Models
;license = LGPL-2.1
;author = Marc Bermejo, Raul Puente
;author_email = marcbermejotarrago@gmail.com, raulpuente@gmail.com
;long_description = file: README.md, LICENSE
;url = https://github.com/AIDL-PROJ-2022/enhanced-srgan
;python_requires = >=3.7
;keywords =
;    computer vision
;    super-resolution
;    generative adversarial networks
;    esrgan
;    pytorch
;classifiers =
;    Development Status :: 4 - Beta
;    Operating System :: OS Independent
;    License :: LGPL-2.1
;    Intended Audience :: Developers
;    Intended Audience :: Science/Research
;    Topic :: Scientific/Engineering :: Artificial Intelligence
;    Topic :: Scientific/Engineering :: Image Recognition
;    Topic :: Software Development :: Libraries
;    Topic :: Software Development :: Libraries :: Python Modules
;    Framework :: PyTorch
;    Programming Language :: Python :: 3

[options]
packages = torch_sr
include_package_data = True
install_requires = file: requirements.txt
tests_require =
    pytest
setup_requires =
    wheel
